Transitions and animations/8,9,10. Modal: Closing the modal/css/styles.css
:root {
  /* Primary */
  --magenta-050: #f5e1f7;
  --magenta-100: #ecbdf2;
  --magenta-200: #ce80d9;
  --magenta-300: #bb61c7;
  --magenta-400: #ad4bb8;
  --magenta-500: #a23dad;
  --magenta-600: #90279c;
  --magenta-700: #7c1a87;
  --magenta-800: #671270;
  --magenta-900: #4e0754;

  /* Neutrals */
  --blue-grey-050: #f0f4f8;
  --blue-grey-100: #d9e2ec;
  --blue-grey-200: #bcccdc;
  --blue-grey-300: #9fb3c8;
  --blue-grey-400: #829ab1;
  --blue-grey-500: #627d98;
  --blue-grey-600: #486581;
  --blue-grey-700: #334e68;
  --blue-grey-800: #243b53;
  --blue-grey-900: #102a43;
}

html {
  font-size: 125%;
  font-family: 'Roboto', sans-serif;
  line-height: 1.4;
}

body {
  background-color: var(--blue-grey-100);
  color: var(--blue-grey-900);
}

h2 {
  font-weight: 400;
}

.button {
  padding: 0.75em 0.75em;
  border: none;
  border-radius: 4px;
  background-color: var(--magenta-300);
  color: #fff;
  transition: background-color linear 0.3s;
}

.button:hover,
.button:active {
  background-color: var(--magenta-600);
  cursor: pointer;
}

main {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.wrap {
  position: relative;
  max-width: 30em;
}

/**
 * START EDITING HERE
 * ==================
 */
.point-hand {
  position: absolute;
  left: 0;
  right: 0;
  max-width: 3em;
  margin-top: 1em;
  margin-right: auto;
  margin-left: auto;
  color: var(--magenta-300);
  animation: point-hand-animation ease-in-out 1s forwards; /* or use cubic-bezier */
}

@keyframes point-hand-animation {
  0% {
    transform: translateY(100px);
    opacity: 0;
  }

  40% {
    opacity: 1;
  }

  90% {
    transform: translateY(0px);
  }

  100% {
    transform: translateY(10px);
  }
}

/* Modal */
.modal-overlay {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  padding: 1em;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  transition:
    opacity ease-in 0.5s,
    z-index ease-in 0.5s;

  &.open-mode {
    z-index: 0;
    opacity: 1;
  }
}

.modal {
  display: grid;
  place-items: center;
  position: relative;
  border-radius: 4px;
  background-color: #d7b5db; /*var(--magenta-300);*/
  box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.15);
  color: #fff;
  min-width: 50vmin;
  min-height: 50vmin;
}

.modal__close-button {
  position: absolute;
  top: -1.5em;
  right: -1.5em;
  padding: 1em 1em;
  font-size: 0.6em;
  border-radius: 50%;
  border: 2px solid var(--blue-grey-400);
  background: var(--blue-grey-400);
  color: white;
  opacity: 0;
}

.modal:hover .modal__close-button {
  opacity: 1;
}

.modal__close-button:hover,
.modal__close-button:active,
.modal__close-button:focus {
  opacity: 1;
  background: var(--magenta-300);
  border-color: var(--magenta-600);
}

